<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tic_tac_button_background">
    <!-- TextView for displaying current player's turn -->
    <!-- Score Card Button -->
    <!-- GridLayout for the Tic Tac Toe board -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/tic_tac_toe"
        android:textColor="#7360DF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewPlayerTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayout"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="-350dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/player_turn"
        android:textColor="#B0578D"
        android:textSize="25sp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="#EFEFEF"
        android:columnCount="3"
        android:padding="2dp"
        android:rowCount="3"
        tools:ignore="UselessParent">

        <!-- Buttons for Tic Tac Toe grid -->

        <!-- Button 1 -->
        <Button
            android:id="@+id/button1"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/button1_description"
            android:padding="0dp"
            android:textColor="#F3F8FF" />



    <!-- Rest of the buttons (button2 to button9) -->

        <Button
            android:id="@+id/button2"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/button2_description"
            android:padding="0dp"
            android:textColor="#F3F8FF" />



        <Button
            android:id="@+id/button3"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:contentDescription="@string/button3_description"
            android:textColor="#F3F8FF"
            />



        <Button
            android:id="@+id/button4"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:contentDescription="@string/button4_description"
            android:textColor="#F3F8FF"
            />



        <Button
            android:id="@+id/button5"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:contentDescription="@string/button5_description"
            android:textColor="#F3F8FF"
            />



        <Button
            android:id="@+id/button6"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:contentDescription="@string/button6_description"
            android:textColor="#F3F8FF"
            />




        <Button
            android:id="@+id/button7"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:contentDescription="@string/button7_description"
            android:textColor="#F3F8FF"
            />




        <Button
            android:id="@+id/button8"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:contentDescription="@string/button8_description"
            android:textColor="#F3F8FF"
            />


        <Button
            android:id="@+id/button9"
            style="@style/TicTacButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:contentDescription="@string/button9_description"
            android:textColor="#F3F8FF"
            />



    </GridLayout>

    <!-- New Game Button -->

    <!-- Score Card Button -->

    <!-- TextViews for displaying scores -->

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="58dp"
        android:fontFamily="monospace"
        android:text="@string/next_level" />

    <TextView
        android:id="@+id/playerXScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPlayerTurn"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="234dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="-4dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/player_x_score"
        android:textColor="#5D3587"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/playerOScore"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPlayerTurn"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="188dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/player_o_score"
        android:textColor="#5D3587"
        android:textColorHighlight="#FF5722"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonNewGame"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-48dp"
        android:layout_marginEnd="82dp"
        android:fontFamily="monospace"
        android:text="@string/reset" />


</RelativeLayout>